--- a/README.org
+++ b/README.org
@@ -8,4 +8,17 @@
 In this repo are my solutions to [[https://adventofcode.com/][Advent of Code]] problems by year and
 language.
 
-#  LocalWords:  repo
+* Running
+Unless otherwise stated in more specific readme files run each solution for a
+day by calling it on the command line with the input file as an argument.  For
+example from the root of this repo:
+#+begin_example
+cd 2024/scheme/1/
+./part-1 input
+#+end_example
+
+I've not added my input files to this repo, so if you want to run this for
+yourself you'll have to make your own input files or grab your own from Advent
+of Code.
+
+#  LocalWords:  repo readme
